prevent viewport scroll on mobile

--- a/test-flickr-api/flickr-photo-pickr.css
+++ b/test-flickr-api/flickr-photo-pickr.css
@@ -277,6 +277,14 @@ form#search-form .help:hover {
 
 /* Simple Support Mobile */
 @media (max-width: 700px){
+    html, body {
+        overflow: hidden;
+    }
+
+    body {
+        position: relative;
+    }
+
     #map-wrapper {
         width: 100vw;
         height: 50vh;
